syntax = "proto3";

package hydrosphere.contract;
option java_package = "io.hydrosphere.serving.contract";

import "contract/model_field.proto";

message ModelSignature {
    string signature_name = 1;
    repeated ModelField inputs = 2;
    repeated ModelField outputs = 3;
}